; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_dp.c_intel_dp_detect_audio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_dp.c_intel_dp_detect_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_connector = type { i32 }
%struct.intel_dp = type { i32 }
%struct.edid = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_connector*)* @intel_dp_detect_audio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intel_dp_detect_audio(%struct.drm_connector* %0) #0 {
  %2 = alloca %struct.drm_connector*, align 8
  %3 = alloca %struct.intel_dp*, align 8
  %4 = alloca %struct.edid*, align 8
  %5 = alloca i32, align 4
  store %struct.drm_connector* %0, %struct.drm_connector** %2, align 8
  %6 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %7 = call %struct.intel_dp* @intel_attached_dp(%struct.drm_connector* %6)
  store %struct.intel_dp* %7, %struct.intel_dp** %3, align 8
  store i32 0, i32* %5, align 4
  %8 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %9 = load %struct.intel_dp*, %struct.intel_dp** %3, align 8
  %10 = getelementptr inbounds %struct.intel_dp, %struct.intel_dp* %9, i32 0, i32 0
  %11 = call %struct.edid* @intel_dp_get_edid(%struct.drm_connector* %8, i32* %10)
  store %struct.edid* %11, %struct.edid** %4, align 8
  %12 = load %struct.edid*, %struct.edid** %4, align 8
  %13 = icmp ne %struct.edid* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load %struct.edid*, %struct.edid** %4, align 8
  %16 = call i32 @drm_detect_monitor_audio(%struct.edid* %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.edid*, %struct.edid** %4, align 8
  %18 = call i32 @kfree(%struct.edid* %17)
  br label %19

19:                                               ; preds = %14, %1
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local %struct.intel_dp* @intel_attached_dp(%struct.drm_connector*) #1

declare dso_local %struct.edid* @intel_dp_get_edid(%struct.drm_connector*, i32*) #1

declare dso_local i32 @drm_detect_monitor_audio(%struct.edid*) #1

declare dso_local i32 @kfree(%struct.edid*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
